--- a/QuickLook.Plugin/QuickLook.Plugin.HtmlViewer/QuickLook.Plugin.HtmlViewer.csproj
+++ b/QuickLook.Plugin/QuickLook.Plugin.HtmlViewer/QuickLook.Plugin.HtmlViewer.csproj
@@ -93,7 +93,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\QuickLook.Plugin.IViewerPlugin\QuickLook.Common.csproj">
+    <ProjectReference Include="..\..\QuickLook.Common\QuickLook.Common.csproj">
       <Project>{85FDD6BA-871D-46C8-BD64-F6BB0CB5EA95}</Project>
       <Name>QuickLook.Common</Name>
       <Private>False</Private>
